--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -1,24 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Skills</h1>
-    <ul>
-        <% skills.forEach(function(s) { %>
-            <li>
-                <a href="/skills/<%= s.id %>">
-                    <%= s.skill %>
-                </a>
-                <%= s.skill %>
-                    -
-                    <%= s.learned ? 'learned' : 'not learned' %>
-            </li>
-            <% }); %>
-    </ul>
-</body>
-</html>
+<%- include('../partials/header') %>
+
+<h3>Skills as of <%= time %></h3>
+
+<ul>
+  <% skills.forEach(function(t) { %>
+    <li>
+      <form
+        action="/skills/<%= t.id %>?_method=DELETE"
+        method="POST"
+        class="delete-form"
+      >
+        <button type="submit">X</button>
+      </form>
+      <a href="/skills/<%= s.id %>"><%= s.skill %></a>
+      - 
+      <%= s.learned ? 'learned' : 'not learned' %>
+    </li>
+  <% }); %>
+</ul>
+<a href="/skills/new">Add Skill</a>
+
+  
+<%- include('../partials/footer') %>
