--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -1,20 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-    <h3>
-        <%= skill.skill %>
-    </h3>
+<%- include('../partials/header') %>
 
-    <h3>
-        Complete <%= skill.learned ? 'Yes' : 'No' %>
-    </h3>
+<h3><%= skill.skill %></h3>
+<h3>Complete: <%= skill.learned ? 'Yes' : 'No' %></h3>
+<a href="/skills/<%= skill.id %>/edit">Edit Skill</a>
 
-</body>
-</html>
+<%- include('../partials/footer') %>
