--- a/views/skills/index.ejs
+++ b/views/skills/index.ejs
@@ -3,16 +3,19 @@
 <h3>Skills as of <%= time %></h3>
 
 <ul>
-  <% skills.forEach(function(t) { %>
+  <!-- Needed to change this to an `s` instead of a `t` -->
+  <% skills.forEach(function(s) { %>
     <li>
+      <!-- Needed to change the `t` to an `s` here -->
       <form
-        action="/skills/<%= t.id %>?_method=DELETE"
+        action="/skills/<%= s.id %>?_method=DELETE"
         method="POST"
         class="delete-form"
       >
         <button type="submit">X</button>
       </form>
-      <a href="/skills/<%= s.id %>"><%= s.skill %></a>
+      <!-- This also needs to be changed to match what our data has. Our data does not have an `id` but it has `skill` -->
+      <a href="/skills/<%= s.skill %>"><%= s.skill %></a>
       - 
       <%= s.learned ? 'learned' : 'not learned' %>
     </li>
